# agent-native-format

./: .env.example  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  COPILOT_START_HERE.md  Dockerfile  Dockerfile.acl  FORMAT.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  RALPH_BACKLOG.md  README.md  SPEC.md  TASKS.md  go.mod  go.sum  naming-decision.md  pyproject.toml
.copilot/agents/: coder.md  planner.md  reviewer.md  tester.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: acl-image.yml  acl-py-publish.yml  acl-release.yml  pages.yml  paper.yml  verify.yml
adapters/: README.md
adapters/python/: README.md
adapters/python/acp_common/: README.md  __init__.py  pyproject.toml
adapters/python/acp_crewai/: README.md  __init__.py  pyproject.toml
adapters/python/acp_langgraph/: README.md  __init__.py  pyproject.toml
adapters/python/acp_openai/: README.md  __init__.py  pyproject.toml
adapters/python/tests/: conftest.py  test_acp_adapters.py  test_acp_common.py  test_acp_common_properties.py  test_acp_langgraph_build.py  test_acp_openai.py
benchmark/: README.md  charts.py  harness.py  report.py
benchmark/agent_accuracy/: README.md  __init__.py  aggregate.py  clients.py  graders.py  harness.py  prompts.py  questions.yaml  requirements.txt  token_counter.py
benchmark/agent_accuracy/fixtures/degraded/: expected.yaml  raw.json  state.acl  state.json
benchmark/agent_accuracy/fixtures/failing/: expected.yaml  raw.json  state.acl  state.json
benchmark/agent_accuracy/fixtures/healthy/: expected.yaml  raw.json  state.acl  state.json
benchmark/agent_accuracy/results/: .gitkeep
benchmark/agent_accuracy/results/2026-05-03-134425/: meta.json  raw.csv  summary.csv  summary.md
benchmark/agent_accuracy/results/2026-05-03-134736/: meta.json  raw.csv  summary.md
benchmark/agent_accuracy/results/2026-05-03-135034/: meta.json  raw.csv  summary.csv  summary.md
benchmark/agent_accuracy/results/2026-05-03-135040/: meta.json  summary.md
benchmark/agent_accuracy/results/2026-05-03-135113/: meta.json  raw.csv  summary.csv  summary.md
benchmark/agent_accuracy/results/2026-05-03-140350/: meta.json  raw.csv  summary.csv  summary.md
benchmark/agent_accuracy/results/2026-05-03-141243/: meta.json  raw.csv  (+2 more)
benchmark/baseline/: README.md  mcp_client.py
benchmark/frontier/: README.md  run_frontier.py
benchmark/scenarios/: 01_db_query.yaml  02_multi_tool.yaml  03_complex_dag.yaml  04_scale.yaml  05_auth_heavy.yaml  README.md
benchmark/tests/: test_charts.py  test_harness.py  test_harness_determinism.py  test_harness_main.py  test_mcp_client.py  test_report.py
blog/: launch-post.md
cmd/: README.md
cmd/acl/: doc.go  main.go  main_test.go
cmd/acp-bridge/: main.go  main_test.go
cmd/acp-server/: README.md  main.go
cmd/anf-mcp/: FORMAT.md  README.md  main.go  main_test.go
cmd/benchmark/: README.md
cmd/import-demo/: main.go
deploy/: README.md  docker-compose.yaml
deploy/k8s/: README.md
docs/: LICENSING.md  acl-spec.md  architecture.md  benchmark-methodology.md  decision-log.md  operator-integration.md  paper-plan.md  phase-log.md  pitch-deck-data.md  positioning.md  protocol.md  quickstart.md  references.md
docs/discovery/: 2026-06-research-log.md
docs/run-log/: 2026-05-02-phase-1-scaffold.md  2026-05-02-phase-2-week-1-server.md  2026-05-02-phase-3-week-2-proxy-and-baseline.md  2026-05-02-phase-4-week-3-adapters-and-scenarios.md
docs/validation/: signals.md
examples/: README.md  bridge.json  vscode-mcp-acp.json
examples/01-k8s-namespace/: README.md  run.sh
examples/02-openapi-petstore/: README.md  run.sh
examples/03-python-decoder/: README.md  run.py
examples/anf-skill/: SKILL.md
internal/: README.md
internal/bridge/: bridge.go  bridge_test.go
internal/builder/: README.md  builder.go  builder_fuzz_test.go  builder_test.go  mocks_test.go
internal/manifest/: README.md
internal/mcpclient/: stdio.go  stdio_test.go
internal/observability/: observability.go  observability_test.go
internal/proxy/: README.md  gates_test.go  mocks_test.go  proxy.go  proxy_test.go
internal/registry/: README.md  registry.go  registry_concurrency_test.go  registry_test.go  seed.go
internal/resolver/: README.md  deferred.go  deferred_concurrency_test.go  deferred_fuzz_test.go  deferred_test.go  embedding.go  embedding_test.go  resolver.go  resolver_fuzz_test.go  resolver_test.go
internal/server/: README.md  mocks_test.go  server.go  server_extra_test.go  server_test.go
internal/sources/k8s/: source.go  source_test.go
internal/sources/mcp/: mocks_test.go  source.go  source_fuzz_test.go  source_test.go
internal/vscodeconfig/: mcpjson.go  mcpjson_test.go
landing/: index.html
paper/: Makefile  README.md  acp.md  acp.tex  references.bib
pkg/: README.md
pkg/acl/: acl.go  acl_test.go  bench_test.go  doc.go
pkg/aclhttp/: doc.go  translator.go  translator_test.go
pkg/aclhttp/testdata/: petstore.json
pkg/aclpg/: doc.go  parse_ddl.go  parse_ddl_test.go  translator.go  translator_test.go
pkg/acp/: README.md  api_error_test.go  client.go  client_test.go  doc.go  mock_httpdoer_test.go  mock_translator_test.go  translator.go
pkg/anf/: encoder.go  types.go
pkg/anfmcp/: server.go  server_test.go
pkg/anftools/: tools.go  tools_test.go
pkg/manifest/: README.md  types.go  types_test.go
python/: Makefile  README.md  pyproject.toml
python/acp_acl/: __init__.py  py.typed
python/tests/: test_decoder.py
results/: 2026-05-02-summary.md  2026-05-02-week2-baseline.json  2026-05-02-week3-baseline.json  2026-05-02-week3-summary.md  README.md
results/frontier/: 2026-05-13-173358-raw.json  2026-05-13-173358-summary.md  2026-05-13-180124-raw.json  2026-05-13-180124-summary.md
scripts/: check-keys.py  check_docs.py  check_paper.py  fake-mcp.py
tests/e2e/: bridge-config.json  mock_mcp_servers.py  run_e2e.sh
tests/integration/: deferred_bridge_test.go  integration_test.go  mcp_source_to_acp_test.go
translators/generic/: translate.go  translate_test.go
translators/kubernetes/: translator.go  translator_test.go
(+4 files in other folders)
