[project]
name = "ninevigil-acp-tools"
version = "0.0.0"
description = "Benchmark and adapter tooling for the NineVigil ACP PoC"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["benchmark", "adapters"]
pythonpath = [
    "benchmark",
    "adapters/python",
    "adapters/python/acp_common",
    "adapters/python/acp_openai",
    "adapters/python/acp_langgraph",
    "adapters/python/acp_crewai",
    "adapters/python/tests",
]
