[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-acl"
version = "0.1.0"
description = "Pure-Python decoder for the Agent Context Language (ACL) — a compact agent-native representation that ships with the NineVigil ACP project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Clawdlinux / NineVigil", email = "team@clawdlinux.dev" },
]
keywords = ["acl", "acp", "llm", "agents", "context", "tokenization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
test = ["pytest>=8", "tiktoken>=0.7"]

[project.urls]
Homepage = "https://github.com/clawdlinux/ninevigil-acp"
Documentation = "https://github.com/clawdlinux/ninevigil-acp/blob/main/docs/acl-spec.md"
Source = "https://github.com/clawdlinux/ninevigil-acp/tree/main/python"
Issues = "https://github.com/clawdlinux/ninevigil-acp/issues"

[tool.hatch.build]
packages = ["acp_acl"]
